Fix Brakeman CI by moving EOL exclusions to config file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,4 @@ jobs:
         run: bundle exec rspec
 
       - name: Run Brakeman
-        run: bundle exec brakeman --no-pager --skip-checks EOLRuby,EOLRails
+        run: bundle exec brakeman --no-pager
